--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "path": "^0.12.7",
     "pug": "^3.0.2"
